# MCP-server

./: .gitignore  CONTRIBUTING.md  Dockerfile  README.en.md  README.es.md  README.md  docker-compose.yml  kit_mcp_standalone.py  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: ci.yml
docker/: entrypoint.sh
src/: __init__.py  __main__.py
src/audit/: __init__.py
src/config/: __init__.py
src/core/: server.py
src/enums/: __init__.py
src/errors/: __init__.py
src/security/: __init__.py
src/transport/: __init__.py
tests/: conftest.py
tests/integration/: test_ssh_transport.py
tests/unit/: test_config_and_errors.py
