[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name        = "kit-mcp-server"
version     = "0.1.0"
description = "Generic MCP server for connecting to any remote server over SSH, Telnet, TCP, or Serial."
readme      = "README.md"
license     = { text = "MIT" }
requires-python = ">=3.11"

dependencies = [
    "mcp[cli]>=1.0",
    "paramiko>=3.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-paramiko",
]

[project.scripts]
kit-mcp = "kit_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build]
sources = ["src"]

# ── Ruff (linting + formatting) ──────────────────────────────
[tool.ruff]
line-length    = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]
ignore = ["E501"]

# ── Mypy ─────────────────────────────────────────────────────
[tool.mypy]
python_version         = "3.11"
strict                 = true
ignore_missing_imports = true

# ── Pytest ───────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths    = ["tests"]
asyncio_mode = "auto"
addopts      = "--cov=kit_mcp --cov-report=term-missing -v"
